--- a/src/styles/components/_modelos.css
+++ b/src/styles/components/_modelos.css
@@ -85,7 +85,7 @@
 .resultado-modelo-container {
     flex: 1;
     overflow-y: auto;
-    padding: 10px;
+    padding: 10px 0 10px 0;
     margin-bottom: 60px;
 }
 
