adiciona campos de entrada para nome e etiquetas no editor de modelos e ajusta estilos dos inputs

--- a/src/styles/components/_editor.css
+++ b/src/styles/components/_editor.css
@@ -35,4 +35,9 @@
 .ql-toolbar {
     border-radius: 4px;
     padding: 5.2px 8px !important;
+    margin: 0 20px 0 10px !important;
+}
+
+.ql-editor {
+    padding: 15px 15px !important;    
 }
