--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,6 +18,7 @@
 @import 'components/_editor.css';
 @import 'components/_modelos.css';
 @import 'components/_checklists.css';
+@import 'components/_dialog.css';
 
 /* Apenas estilos globais essenciais */
 body {
