adiciona funcionalidade de edição de modelos e ajusta estilos dos botões

--- a/src/styles/base/_typography.css
+++ b/src/styles/base/_typography.css
@@ -14,6 +14,7 @@ body:not(.ql-editor *) {
     font-size: 13px;
 }
 
-.btn-inserir {
-    font-size: 14px;
+.btn-inserir,.btn-danger,.btn-editar {
+    font-family: inherit;
+    font-size: 12px;
 }
