--- a/src/styles/base/_typography.css
+++ b/src/styles/base/_typography.css
@@ -1,12 +1,14 @@
 body:not(.ql-editor *) {
-    font-family: 'Libre Baskerville', Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;
-    font-size: 12px;
+    /*font-family: 'Libre Baskerville', Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;*/
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 12pt;
     line-height: 1.6;
 }
 
 .modelo-box {
-    font-family: 'Libre Baskerville', Baskerville, serif;
-    font-size: 12px;
+    /*font-family: 'Libre Baskerville', Baskerville, serif;*/
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 12pt;
     line-height: 1.6;
 }
 
