--- a/src/styles/base/_typography.css
+++ b/src/styles/base/_typography.css
@@ -2,14 +2,14 @@ body:not(.ql-editor *) {
     /*font-family: 'Libre Baskerville', Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;*/
     font-family: 'Times New Roman', Times, serif;
     font-size: 12pt;
-    line-height: 1.6;
+    line-height: 1;
 }
 
 .modelo-box {
     /*font-family: 'Libre Baskerville', Baskerville, serif;*/
     font-family: 'Times New Roman', Times, serif;
     font-size: 12pt;
-    line-height: 1.6;
+    line-height: 1;
 }
 
 .tab {
@@ -18,5 +18,5 @@ body:not(.ql-editor *) {
 
 .btn-inserir,.btn-danger,.btn-editar {
     font-family: inherit;
-    font-size: 12px;
+    font-size: 12pt;
 }
