--- a/src/styles/base/_typography.css
+++ b/src/styles/base/_typography.css
@@ -1,22 +1,24 @@
 body:not(.ql-editor *) {
     /*font-family: 'Libre Baskerville', Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;*/
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 12pt;
+    /*font-family: 'Times New Roman', Times, serif;*/
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 11pt;
     line-height: 1;
 }
 
 .modelo-box {
     /*font-family: 'Libre Baskerville', Baskerville, serif;*/
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 12pt;
+    /*font-family: 'Times New Roman', Times, serif;*/
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 11pt;
     line-height: 1;
 }
 
 .tab {
-    font-size: 13px;
+    font-size: 12pt;
 }
 
 .btn-inserir,.btn-danger,.btn-editar {
     font-family: inherit;
-    font-size: 12pt;
+    font-size: 11pt;
 }
