--- a/src/styles/components/_inputs.css
+++ b/src/styles/components/_inputs.css
@@ -133,12 +133,11 @@
 .checklist-item-row {
     display: flex;
     flex-direction: column;
-    gap: 8px;
     margin-bottom: 10px;
-    background-color: var(--bg-secondary);
+    /*background-color: var(--bg-secondary);*/
     padding: 8px;
-    border-radius: 4px;
-    border: 1px solid var(--border-color);
+    /*border-radius: 4px;
+    border: 1px solid var(--border-color);*/
 }
 
 .checklist-item-controls {
