--- a/src/styles/components/_modelos.css
+++ b/src/styles/components/_modelos.css
@@ -96,8 +96,8 @@
 .resultado-modelo-container {
     flex: 1;
     overflow-y: auto;
-    padding: 10px 0 10px 0;
-    margin-bottom: 60px;
+    padding: 10px 10px 10px 0;
+    margin-bottom: 50px;
 }
 /*
 .resultado-modelo-texto {
