adiciona suporte para edição de checklist, ajusta mensagens de sucesso e melhora o layout dos botões

--- a/src/styles/components/_modelos.css
+++ b/src/styles/components/_modelos.css
@@ -99,11 +99,7 @@
     padding: 10px 10px 10px 0;
     margin-bottom: 50px;
 }
-/*
-.resultado-modelo-texto {
-    white-space: pre-wrap;
-    padding: 10px;
-    line-height: 1;
-    text-align: justify;
+
+body[data-page="checklist-editor"] .resultado-modelo-container {
+    margin-bottom: 0px;
 }
-*/
